--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<a href="003.html" target="_blank">003</a>
 	<a href="004.html" target="_blank">004</a>
 	<a href="links.html">links</a>
+	<a href="https://github.com/loleg/threeffiti">source</a>
 	<a href="https://twitter.com/share" class="twitter-share-button" data-via="loleg">tweet</a>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	</body>
