--- a/links.html
+++ b/links.html
@@ -33,6 +33,8 @@ Inspiration
 <a href="http://blog.priceonomics.com/post/43085729257/the-street-kids-of-san-francisco">Street kids of San Francisco</a>
 <a href="http://visualizing.org/visualizations/nyc-311-composite">What do New Yorkers complain about?</a>
 <a href="http://graffitianalysis.com/">Graffiti Analysis</a>
+<a href="http://www.flickr.com/photos/danielferal/6439783515/">Graffiti infographic by Daniel Feral</a>
+<a href="http://www.flong.com/blog/2011/infoviz-graffiti-piechart/">Pie-chart stencil</a>
 <a href="http://www.grafrank.com/">GrafRank</a>
 <a href="http://www.spacegoo.com/cadillac/">Cadillac Ranch</a>
 <a href="http://lightgraffiti.littlesun.com/">Little Sun</a>
