--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 			}
 			.in {
 				background:#fff;
-				opacity:0.6;
+				opacity:0.8;
+				color:#000;
+				font-weight:bold;
+				font-size:90%;
+				padding:2em;
+			}
+			.in em {
+				font-style: normal;
+				background: #ec9;
 			}
 			img {
 				opacity:0.7;
@@ -32,24 +40,19 @@
 	</head>
 	<body>
 	<div class="in">
-	This (ALPHA) project aims to ask what place graffiti & street art has in the urban environment,
-	using 3D graphics to produce a juxtaposition of neighbourhood characteristics & tagging style.
-	Inspired by artists who found their creative roots decorating inner city walls,   
-	provoked by web sites documenting the omnipresent and ephemeral works of elusive creators,
-	this could be a virtual gallery adding the feeling of space & movement, a data visualization
-	contrasting statistics of the inner city for new insights, or anything else the participants of
-	a shared online experiment may imagine. Current street art photography borrowed from Zueri-Graffiti.ch 
-	and building outlines adapted from an Open Street Map of Zürich. Click to fly forwards, right click
-	to fly backwards, reload the page if you get lost. Works best with Google Chrome and a fast computer.
-	Smile & enjoy :)
+	This (α) project aims to quantify how graffiti imposes itself on the <em>urban environment</em>, exposing layers of subculture that are otherwise hidden.
+	Using data analytics and computer graphics we juxtapose neighbourhood characteristics &amp; the diverse styles of painters. Whether you consider them vandals, taggers or street artists, they are omnipresent in our cities, whose administrations &amp; businesses wage endless, expensive battle to protect the walls from unwanted manifestations.
+	This experiment could become a virtual gallery, a multifaceted data visualization, a shared online experiment.
+	Works best with Google Chrome and a fast computer.
 	</div>
+	<ul class="menu">
+		<li>
+			<a class="title" href="zuri.html">Zürich</a>
+			<a class="spend" href="#">$ 15 million</a>
+			<a class="spend" href="#">$ 15 million</a>
+		</li>
 	<p>
 	<img src="threeffitti.png"><br/>
-	<a href="001.html" target="_blank">001</a>
-	<a href="002.html" target="_blank">002</a>
-	<a href="003.html" target="_blank">003</a>
-	<a href="004.html" target="_blank">004</a>
-	<a href="005.html" target="_blank">005</a>
 	<a href="links.html">links</a>
 	<a href="https://github.com/loleg/threeffiti">source</a>
 	<a href="https://twitter.com/share" class="twitter-share-button" data-via="loleg">tweet</a>
