--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
 	an attempt to study underground culture using open data.
 	With analytics and computer graphics we can juxtapose neighbourhood characteristics with
 	diverse street styles. Public administrations &amp; business in our cities wage a
-	constant, expensive battle to protect the walls from unwanted manifestations.
+	constant, expensive battle to protect buildings from unwanted manifestations.
 	However, it is difficult to get a good high level view of what is going on: there are
 	few statistics and studies, or if they exist they are not open to the public.
 	This experiment is an <a href="http://www.urbandatachallenge.org">Urban Data Challenge</a> prototype,
 	that with time could become a virtual gallery, a multifaceted data visualization, a shared online experience.
-	This is <u>not</u> an endorsement of illegal spraying.
+	This site does not endorse illegal spraying:
+	visit <a href="http://www.legal-walls.net/">legal walls</a> for a peaceful alternative.
 	<em><a href="mailto:ask@utou.ch">\Ø</a></em>
 	</div>
 	
