--- a/zuri.html
+++ b/zuri.html
@@ -81,6 +81,7 @@
 			population</a>
 		<a href="http://data.stadt-zuerich.ch/content/portal/de/index/ogd/daten/medianeinkommen_quartier.html#description1">
 			income</a>
+		<a href="https://github.com/swissnexSF/Urban-Data-Challenge/tree/master/public-transportation/zurich/geo">geojson</a>
 		<br/><br/>
 		<a href="index.html">intro</a>
 		<a href="links.html">links</a>
