--- a/zuri.html
+++ b/zuri.html
@@ -179,6 +179,7 @@
     	return '<div class="district schraeg">'
     		+ '<h5>' + name + '</h5><ul>'
     		+ '<li>' + 'population: ' + data.population + '</li>'
+    		+ '<li>' + data.population_u20 + ' under 20</li>'
     		+ '<li>' + 'income 2012: ' + data.med_inc2012 + '</li>'
     		+ '<li>' + 'trend 2013: ' + data.trend + '</li>'
     		+ '<li><span class="inlinesparkline">' + trends + '</span>'
