--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 	<div class="in">
 	This project aims to quantify how graffiti imposes itself on the urban environment,
 	an attempt to study underground culture using open data.
-	<b>How to:</b> click on the name of a city above, you will see a map of the terrain.
+	<b>How to:</b> click on the name of a city above, you will see a map of the terrain 
+	showing economic trendiness (5 year growth) and youth population.
 	Click on any of the 'hoods to open a 3D visualization featuring sample graffiti from the area.
 	<b>Background:</b>
 	With analytics and computer graphics we can juxtapose neighbourhood characteristics with
@@ -102,7 +103,7 @@
 	that with time could become a virtual gallery, a multifaceted data visualization, a shared online experience.
 	This site does not endorse illegal spraying:
 	visit <a href="http://www.legal-walls.net/">legal walls</a> for peaceful alternatives.
-	<em><a href="mailto:ask@utou.ch">\Ø</a></em>
+	<a style="color:#fc3" href="mailto:ask@utou.ch">\Ø</a>
 	</div>
 	
 	<p class="links">
