--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
 	<b>How to:</b> click on the name of a city above, you will see a map of the terrain 
 	showing economic trendiness (5 year growth) and youth population.
 	Click on any of the 'hoods to open a 3D visualization featuring sample graffiti from the area.
+	This requires <a href="http://get.webgl.org/">a modern browser</a> and 3D accelerator.
 	<b>Background:</b>
 	With analytics and computer graphics we can juxtapose neighbourhood characteristics with
 	diverse street styles. Public administrations &amp; business in our cities wage a
 	constant, expensive battle to protect buildings from unwanted manifestations.
 	However, it is difficult to get a good high level view of what is going on: there are
-	few statistics and studies, or if they exist they are not open to the public.
-	This experiment is an <a href="http://www.urbandatachallenge.org">Urban Data Challenge</a> prototype,
-	that with time could become a virtual gallery, a multifaceted data visualization, a shared online experience.
-	This site does not endorse illegal spraying:
+	few statistics and studies, or if they exist they are not yet public.
+	By exploring the problem openly, we may find new opportunities.
+	<b>Important:</b> this site does not endorse illegal spraying:
 	visit <a href="http://www.legal-walls.net/">legal walls</a> for peaceful alternatives.
-	<a style="color:#fc3" href="mailto:ask@utou.ch">\Ø</a>
+	<a style="color:#fc3" href="mailto:info@jouda.cc">\Ø</a>
 	</div>
 	
 	<p class="links">
