--- a/zuri.html
+++ b/zuri.html
@@ -69,6 +69,7 @@
 				top:30px;
 				right:30px;
 				z-index:101;
+				width:90px;
 				
 				-webkit-transform: rotate(3deg);
 				-moz-transform: rotate(3deg);
@@ -79,6 +80,10 @@
 			.district, .district * { padding:0; margin:0; font-family: Monospace; }
 			.district h5 { font-size:20px; font-weight:bold;  }
 			.district ul, .district li { list-style:none; }
+			
+			.legend p { margin:1em 0 0 0; }
+			.legend .icon img { width:12px; height:16px; }
+			.legend .icon { float:left; padding-right:4px; }
 		</style>
 	</head>
 	<body>
@@ -89,7 +94,8 @@
 			<div class="legend">
 				<p><div class="swatch" style="background:#93406A">&nbsp;</div> Slowest</p>
 				<p><div class="swatch" style="background:#D0BD04">&nbsp;</div> Trendiest</p>
-				<p><div class="spraycan"><img src="images/spraycan.png"/></div> Legal wall</p>
+				<p><div class="icon"><img src="images/spraycan.png" /></div> Legal wall</p>
+				<p><div class="icon"><img src="images/alert.png" /></div> Clean-up!</p>
 			</div>
 		</div>
 	</div>
